manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-docs
  labels:
    app.kubernetes.io/name: ops-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ops-docs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ops-docs
    spec:
      containers:
        - name: ops-docs
          image: m.daocloud.io/docker.io/library/nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: docs-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: docs-content
          persistentVolumeClaim:
            claimName: hugo-docs-pvc
