manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-docs
  labels:
    app.kubernetes.io/name: ops-docs
spec:
  selector:
    app.kubernetes.io/name: ops-docs
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
