manifests/clash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clash-ui-ingress
  namespace: basic-components
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - clash.72602.space
      secretName: clash.72602.space-tls
  rules:
    - host: clash.72602.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clash-ui-external
                port:
                  number: 9090
