manifests/ingress-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-docs-root
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: 72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-docs
                port:
                  number: 80
