manifests/ingress-port.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-docs
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ops.docs.72602.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-docs
                port:
                  number: 80
    - host: ops.docs.72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-docs
                port:
                  number: 80
  tls:
    - hosts:
        - ops.docs.72602.space
      secretName: ops.docs.72602.space-tls
