manifests/sub2api-online-compat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sub2api-online-compat
  namespace: application
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: nginx
  rules:
    - host: sub2api.72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sub2api
                port:
                  number: 8080
  tls:
    - hosts:
        - sub2api.72602.online
      secretName: sub2api.72602.online-tls
